tests/baselines/reference/callbackArgsDifferByOptionality.errors.txt
==== tests/cases/compiler/callbackArgsDifferByOptionality.ts (2 errors) ====
    function x3(callback: (x?: 'hi') => number);
                          ~~~~~~~~~~~~~~~~~~~~
!!! error TS2382: Specialized overload signature is not assignable to any non-specialized signature.
    function x3(callback: (x: string) => number);
    function x3(callback: (x: any) => number) {
        cb();
        ~~
!!! error TS2304: Cannot find name 'cb'.
    }